# mutly_agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose_all.yml  docker-compose_origin.yml  mcp_servers.example.json  pyproject.toml  pytest.ini  test_screen.py  模型返回格式.json
alembic/: README  env.py
alembic/versions/: 20260309_0001_create_users_threads_messages.py
app/: checkpoints.sqlite  main.py
app/api/: auth.py  chat.py  threads.py
app/core/: exceptions.py
app/db/: models.py  repository.py  session.py
app/evaluation/: __init__.py  agent_ab.py
app/graph/: build_graph.py  state.py
app/infrastructure/: client.py  image_to_text_ingestion.py  local_server.py  rag_server.py  rag_tool.py  setup.py  tavily_server.py
app/llm/: __init__.py  client.py  prompt_manager.py  prompts.py  wrapper.py
app/rag/: common.py  embedding_tool.py  query_embedding.py
app/services/: chat_explainability.py  chat_persistence.py
datasets/agent_eval/: README.md  eval_cases.jsonl  schema.json
evals/: README.md  __init__.py  registry.yaml
evals/adapters/: __init__.py  agentbench_adapter.py  base.py  gaia_adapter.py  (+2 more)
scripts/: evaluate_agent_dataset.py  run_agent_ab_eval.py
static/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
tests/: conftest.py  embedding_tool.py  test_agent_ab_loop_evaluation.py  test_agent_eval_dataset.py  test_agent_eval_metrics.py  test_auth.py  test_controller.py  test_evals_pipeline.py  test_llm.py  test_mcp.py  test_planner.py  test_rag_retrieval.py  test_step1.py  test_step2.py  test_step4.py
(+107 files in other folders)
